fixed small bug application.js, prevention AOS animation working on smaller screens

--- a/app/assets/stylesheets/components/_navbar_user.scss
+++ b/app/assets/stylesheets/components/_navbar_user.scss
@@ -54,7 +54,7 @@
 }
 
 .navbar-nav.mr-auto.navbar-mobile-flex > *{
-  margin: 1em 0;
+  margin: 2em 0;
 }
 
 .user-tab-highlighter {
